<resources>
    <string name="app_name">My Application</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="filmku">FilmKu</string>
    <string name="toolbar">Toolbar</string>
    <string name="now_showing">Now Showing</string>
    <string name="popular">Popular</string>
    <string name="title_movie1">Spiderman: No Way Home</string>
    <string name="title_description">Description</string>
    <string name="decription">With Spider-Man\'s identity now revealed, Peter asks Doctor Strange for help. When a spell goes wrong, dangerous foes from other worlds start to appear, forcing Peter to discover what it truly means to be Spider-Man.</string>
    <string name="length">Length</string>
    <string name="language">Language</string>
    <string name="rating">Rating</string>
    <string name="cast">Cast</string>
    <string name="action">Action</string>
    <string name="actor_name">Tom Holland</string>
    <string name="no_internet_connectivity">Tidak ada koneksi internet</string>
    <string name="try_again">Silahkan Coba Lagi</string>
    <string name="loading">Loading...</string>
    <string name="title_film">Title Film</string>
    <string name="no_description">No Description</string>
    <string name="_0">0</string>
    <string name="english">English</string>
    <string name="_0min">0min</string>
    <string name="_0_10_imdb">0/10 IMDb</string>
    <string name="_9_1_10_imdb">9.1/10 IMDb</string>
</resources>