<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="24dp"
            android:paddingTop="24dp"
            app:layout_scrollFlags="scroll|snap"
            tools:ignore="RtlSymmetry">

            <ImageView
                android:id="@+id/ivFilter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/filter"
                app:layout_constraintStart_toStartOf="@+id/constraint"
                app:layout_constraintTop_toTopOf="@+id/constraint"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/coba"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/merriweather_black"
                android:text="@string/filmku"
                android:textColor="@color/indigo_900"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/constraint"
                app:layout_constraintStart_toStartOf="@+id/constraint"
                app:layout_constraintTop_toTopOf="@+id/constraint" />

            <ImageView
                android:id="@+id/ivNotification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:background="@drawable/notif"
                app:layout_constraintEnd_toEndOf="@id/constraint"
                app:layout_constraintTop_toTopOf="@+id/constraint"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tvNowShowing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:fontFamily="@font/merriweather_black"
                android:text="@string/now_showing"
                android:textColor="@color/indigo_900"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/coba" />

            <com.erkutaras.statelayout.StateLayout
                android:id="@+id/state_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvNowShowing"
                app:sl_state="content">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvNowShowing"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="17dp"
                    android:clipToPadding="false"
                    tools:itemCount="5"
                    tools:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    tools:listitem="@layout/now_showing_item"
                    tools:orientation="horizontal"
                    tools:spanCount="1" />

            </com.erkutaras.statelayout.StateLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tvPopular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/merriweather_black"
            android:text="@string/popular"
            android:textColor="@color/indigo_900"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rvNowShowing" />

    </com.google.android.material.appbar.AppBarLayout>

    <com.erkutaras.statelayout.StateLayout
        android:id="@+id/state_layout_v2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:sl_state="content">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvPopular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="17dp"
            android:clipToPadding="false"
            app:layout_constraintStart_toStartOf="parent"
            tools:itemCount="4"
            tools:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            tools:listitem="@layout/popular_item"
            tools:orientation="vertical"
            tools:spanCount="2" />

    </com.erkutaras.statelayout.StateLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>